src/objects/Jira_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_URL__c</fullName>
        <label>Connection URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Jira Credentials</label>
</CustomObject>